tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_global_const_expr_identifier_fast_path.objc3
module MessageSendNonzeroGlobalConstExprIdentifierFastPath;

let base = 3;
let receiver = base + 4;

fn main() -> i32 {
  return [receiver ping];
}

