tests/tooling/fixtures/native/recovery/negative/negative_assignment_compound_rhs_bool.objc3
// Expected diagnostic code(s): O3S206.
module NegativeAssignmentCompoundRhsBool;

fn main() -> i32 {
  let acc = 4;
  let flag = true;
  acc += flag;
  return acc;
}